--- a/.config/Dockerfile
+++ b/.config/Dockerfile
@@ -23,9 +23,9 @@ ARG INFLUX_TOKEN
 ARG INFLUX_ORG
 ARG INFLUX_BUCKET_MAIN
 ARG INFLUX_BUCKET_ONLINE
-ARG BACKUP_FTP_HOST
-ARG BACKUP_FTP_LOGIN
-ARG BACKUP_FTP_PASSWORD
+ARG CF_R2_API
+ARG CF_R2_ACCESS_ID
+ARG CF_R2_ACCESS_TOKEN
 
 ENV NUXT_DOMAIN=${DOMAIN}
 ENV NUXT_NAVIGRAPH_CLIENT_ID=${NAVIGRAPH_CLIENT_ID}
