feat: VATSIM kafka websockets support

--- a/.config/Dockerfile
+++ b/.config/Dockerfile
@@ -10,6 +10,7 @@ ARG VATSIM_CLIENT_ID
 ARG VATSIM_CLIENT_SECRET
 ARG VATSIM_ENDPOINT
 ARG DATABASE_URL
+
 ARG DISCORD_CLIENT_ID
 ARG DISCORD_TOKEN
 ARG DISCORD_SERVER_ID
@@ -18,11 +19,18 @@ ARG DISCORD_RELEASES_CHANNEL_ID
 ARG DISCORD_ROLE_ID
 ARG ACCESS_BY_DISCORD_ROLES
 ARG IS_DOWN
+
 ARG INFLUX_URL
 ARG INFLUX_TOKEN
 ARG INFLUX_ORG
 ARG INFLUX_BUCKET_MAIN
 ARG INFLUX_BUCKET_ONLINE
+
+ARG VATSIM_KAFKA_BROKER
+ARG VATSIM_KAFKA_USER
+ARG VATSIM_KAFKA_PASSWORD
+ARG VATSIM_KAFKA_GROUP
+
 ARG CF_R2_API
 ARG CF_R2_ACCESS_ID
 ARG CF_R2_ACCESS_TOKEN
@@ -50,6 +58,10 @@ ENV NUXT_INFLUX_TOKEN=${INFLUX_TOKEN}
 ENV NUXT_INFLUX_ORG=${INFLUX_ORG}
 ENV NUXT_INFLUX_BUCKET_MAIN=${INFLUX_BUCKET_MAIN}
 ENV NUXT_INFLUX_BUCKET_ONLINE=${INFLUX_BUCKET_ONLINE}
+ENV NUXT_VATSIM_KAFKA_BROKER=${VATSIM_KAFKA_BROKER}
+ENV NUXT_VATSIM_KAFKA_USER=${VATSIM_KAFKA_USER}
+ENV NUXT_VATSIM_KAFKA_PASSWORD=${VATSIM_KAFKA_PASSWORD}
+ENV NUXT_VATSIM_KAFKA_GROUP=${VATSIM_KAFKA_GROUP}
 ENV CF_R2_API=${CF_R2_API}
 ENV CF_R2_ACCESS_ID=${CF_R2_ACCESS_ID}
 ENV CF_R2_ACCESS_TOKEN=${CF_R2_ACCESS_TOKEN}
