--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,11 @@ INFLUX_TOKEN=
 INFLUX_ORG=
 INFLUX_BUCKET=
 
+VATSIM_KAFKA_BROKER=
+VATSIM_KAFKA_USER=
+VATSIM_KAFKA_PASSWORD=
+VATSIM_KAFKA_GROUP=
+
 CF_R2_API=
 CF_R2_ACCESS_ID=
 CF_R2_ACCESS_TOKEN=
