--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt-app",
-  "version": "0.4.2",
+  "version": "0.4.3-alpha.1",
   "private": true,
   "type": "module",
   "scripts": {
@@ -26,12 +26,15 @@
     "@turf/great-circle": "^7.0.0",
     "adm-zip": "^0.5.14",
     "aws-sdk": "^2.1657.0",
+    "bufferutil": "^4.0.8",
     "chardet": "^2.0.0",
     "cron": "^3.1.7",
+    "deep-object-diff": "^1.1.9",
     "discord.js": "^14.15.3",
     "idb": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
+    "kafkajs": "^2.2.4",
     "metar-taf-parser": "^9.0.1",
     "nuxt": "^3.12.3",
     "ol": "^9.2.4",
@@ -43,7 +46,8 @@
     "ua-parser-js": "2.0.0-beta.3",
     "vite-svg-loader": "^5.1.0",
     "vue": "^3.4.31",
-    "vue-router": "^4.4.0"
+    "vue-router": "^4.4.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@nuxt/devtools": "^1.3.9",
@@ -55,6 +59,7 @@
     "@types/geojson": "^7946.0.14",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.10",
+    "@types/ws": "^8",
     "eslint": "^9.6.0",
     "postcss": "^8.4.39",
     "postcss-html": "^1.7.0",
