--- a/docker-compose.prod-next.yml
+++ b/docker-compose.prod-next.yml
@@ -6,6 +6,8 @@ services:
     depends_on:
       db-next:
         condition: service_healthy
+    ports:
+      - 8000:3000
     healthcheck:
       test: "bash -c 'echo -n > /dev/tcp/127.0.0.1/3000'"
       interval: 1s
