--- a/.config/Dockerfile
+++ b/.config/Dockerfile
@@ -25,6 +25,8 @@ ARG INFLUX_TOKEN
 ARG INFLUX_ORG
 ARG INFLUX_BUCKET_MAIN
 ARG INFLUX_BUCKET_ONLINE
+ARG INFLUX_ENABLE_WRITE
+ARG INFLUX_BUCKET_PLANS
 
 ARG VATSIM_KAFKA_BROKER
 ARG VATSIM_KAFKA_USER
@@ -58,6 +60,8 @@ ENV NUXT_INFLUX_TOKEN=${INFLUX_TOKEN}
 ENV NUXT_INFLUX_ORG=${INFLUX_ORG}
 ENV NUXT_INFLUX_BUCKET_MAIN=${INFLUX_BUCKET_MAIN}
 ENV NUXT_INFLUX_BUCKET_ONLINE=${INFLUX_BUCKET_ONLINE}
+ENV NUXT_INFLUX_ENABLE_WRITE=${INFLUX_ENABLE_WRITE}
+ENV NUXT_INFLUX_BUCKET_PLANS=${INFLUX_BUCKET_PLANS}
 ENV NUXT_VATSIM_KAFKA_BROKER=${VATSIM_KAFKA_BROKER}
 ENV NUXT_VATSIM_KAFKA_USER=${VATSIM_KAFKA_USER}
 ENV NUXT_VATSIM_KAFKA_PASSWORD=${VATSIM_KAFKA_PASSWORD}
@@ -70,7 +74,8 @@ ENV INFLUX_URL=${INFLUX_URL}
 ENV INFLUX_TOKEN=${INFLUX_TOKEN}
 ENV INFLUX_ORG=${INFLUX_ORG}
 ENV INFLUX_BUCKET_MAIN=${INFLUX_BUCKET_MAIN}
-ENV INFLUX_BUCKET_ONLINE=${INFLUX_BUCKET_ONLINE}
+ENV INFLUX_BUCKET_PLANS=${INFLUX_BUCKET_PLANS}
+ENV INFLUX_ENABLE_WRITE=${INFLUX_ENABLE_WRITE}
 
 COPY package.json package.json
 COPY yarn.lock yarn.lock
