--- a/.env.example
+++ b/.env.example
@@ -21,7 +21,10 @@ DISCORD_TOKEN=
 INFLUX_URL=
 INFLUX_TOKEN=
 INFLUX_ORG=
-INFLUX_BUCKET=
+INFLUX_BUCKET_MAIN=
+INFLUX_BUCKET_PLANS=
+INFLUX_BUCKET_ONLINE=
+INFLUX_ENABLE_WRITE=false
 
 VATSIM_KAFKA_BROKER=
 VATSIM_KAFKA_USER=
