--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -62,6 +62,8 @@ jobs:
             INFLUX_ORG=${{ secrets.INFLUX_ORG }}
             INFLUX_BUCKET_MAIN=${{ secrets.INFLUX_BUCKET_MAIN }}
             INFLUX_BUCKET_ONLINE=${{ secrets.INFLUX_BUCKET_ONLINE }}
+            INFLUX_ENABLE_WRITE=${{ secrets.INFLUX_ENABLE_WRITE }}
+            INFLUX_BUCKET_PLANS=${{ secrets.INFLUX_BUCKET_PLANS }}
             CF_R2_API=${{ secrets.CF_R2_API }}
             CF_R2_ACCESS_ID=${{ secrets.CF_R2_ACCESS_ID }}
             CF_R2_ACCESS_TOKEN=${{ secrets.CF_R2_ACCESS_TOKEN }}
