Add feature toggle for sockets disable

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,7 @@ INFLUX_BUCKET_MAIN=
 INFLUX_BUCKET_PLANS=
 INFLUX_BUCKET_ONLINE=
 INFLUX_ENABLE_WRITE=false
+DISABLE_WEBSOCKETS=false
 
 VATSIM_KAFKA_BROKER=
 VATSIM_KAFKA_USER=
