--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -64,6 +64,7 @@ jobs:
             INFLUX_BUCKET_ONLINE=${{ secrets.INFLUX_BUCKET_ONLINE }}
             INFLUX_ENABLE_WRITE=${{ vars.INFLUX_ENABLE_WRITE }}
             INFLUX_BUCKET_PLANS=${{ secrets.INFLUX_BUCKET_PLANS }}
+            DISABLE_WEBSOCKETS=${{ vars.DISABLE_WEBSOCKETS }}
             CF_R2_API=${{ secrets.CF_R2_API }}
             CF_R2_ACCESS_ID=${{ secrets.CF_R2_ACCESS_ID }}
             CF_R2_ACCESS_TOKEN=${{ secrets.CF_R2_ACCESS_TOKEN }}
