--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt-app",
-  "version": "0.4.3-rc.3",
+  "version": "0.4.3",
   "private": true,
   "type": "module",
   "scripts": {
