--- a/.config/nginx/default.conf
+++ b/.config/nginx/default.conf
@@ -6,7 +6,7 @@ server {
 
     location /ws {
         resolver 127.0.0.11;
-        set $upstream_next app;
+        set $upstream_prod app;
         proxy_pass http://$upstream_prod:8880;
 
         proxy_http_version 1.1;
