feat: spawn separate process with vatsim, WS and kafka

--- a/.config/Dockerfile
+++ b/.config/Dockerfile
@@ -79,6 +79,10 @@ ENV INFLUX_BUCKET_MAIN=${INFLUX_BUCKET_MAIN}
 ENV INFLUX_BUCKET_PLANS=${INFLUX_BUCKET_PLANS}
 ENV INFLUX_ENABLE_WRITE=${INFLUX_ENABLE_WRITE}
 ENV DISABLE_WEBSOCKETS=${DISABLE_WEBSOCKETS}
+ENV VATSIM_KAFKA_BROKER=${VATSIM_KAFKA_BROKER}
+ENV VATSIM_KAFKA_USER=${VATSIM_KAFKA_USER}
+ENV VATSIM_KAFKA_PASSWORD=${VATSIM_KAFKA_PASSWORD}
+ENV VATSIM_KAFKA_GROUP=${VATSIM_KAFKA_GROUP}
 
 COPY package.json package.json
 COPY yarn.lock yarn.lock
