--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "stylelint-config-recommended-scss": "^14.1.0",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^36.0.1",
+    "tsx": "^4.16.2",
     "typescript": "5.5.4",
     "vite-plugin-eslint2": "^4.4.0",
     "vue-component-type-helpers": "^2.0.29",
