--- a/.config/nginx/nginx.conf
+++ b/.config/nginx/nginx.conf
@@ -51,9 +51,10 @@ http {
     ##
 
     gzip on;
-    gzip_min_length 10240;
+    gzip_min_length 64;
     gzip_proxied expired no-cache no-store private auth;
-    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml;
+    gzip_comp_level 9;
+    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml text/html application/json;
     gzip_disable "msie6";
 
     ##
