refactor: move sockets to Cloudflare

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,4 +2,4 @@ blank_issues_enabled: false
 contact_links:
   - name: Discord
     url: https://vatsim-radar.com/discord
-    about: Please join our Discord to report issues and feature requests
+    about: Feel free to join our Discord to discuss stuff, including possible bugs and suggestions!
