--- a/package.json
+++ b/package.json
@@ -75,7 +75,8 @@
     "typescript": "5.5.4",
     "vite-plugin-eslint2": "^4.4.0",
     "vue-component-type-helpers": "^2.0.29",
-    "vue-tsc": "^2.0.29"
+    "vue-tsc": "^2.0.29",
+    "wrangler": "^3.72.0"
   },
   "packageManager": "yarn@4.4.0"
 }
