--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ VATSIM_CLIENT_ID=819
 VATSIM_CLIENT_SECRET=QqahebIdibK4rNsFyg8AKbx9lbdYpORwDuR0NBDe
 VATSIM_ENDPOINT=https://auth-dev.vatsim.net
 
-DOMAIN=https://localhost:8080
+DOMAIN=http://localhost:8080
 DATABASE_URL=mysql://root:localhost@db:3306/radar?schema=public
 
 DISCORD_CLIENT_ID=1229876151602905220
