--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt-app",
-  "version": "0.4.4-beta.1",
+  "version": "0.4.4-beta.2",
   "private": true,
   "type": "module",
   "scripts": {
@@ -61,6 +61,7 @@
     "@types/node": "^22.5.0",
     "@types/ws": "^8.5.12",
     "eslint": "^9.9.0",
+    "fast-xml-parser": "^4.4.1",
     "postcss": "^8.4.41",
     "postcss-html": "^1.7.0",
     "sass": "^1.77.8",
