chore: setup new deploy

--- a/.config/nginx/default.conf
+++ b/.config/nginx/default.conf
@@ -1,13 +1,31 @@
+http {
+    upstream prod {
+        server 10.110.0.2:8080;
+        server 10.110.0.2:8081;
+    }
+
+    upstream prod_ws {
+        server 10.110.0.2:8880;
+    }
+
+    upstream next {
+         server 10.110.0.3:8080;
+    }
+
+    upstream next_ws {
+         server 10.110.0.3:8880;
+    }
+}
+
 server {
     listen 80 default_server;
     listen [::]:80 default_server;
 
-    server_name _;
+    server_name vatsim-radar.com www.vatsim-radar.com do.vatsim-radar.com;
 
     location /ws {
         resolver 127.0.0.11;
-        set $upstream_prod app;
-        proxy_pass http://$upstream_prod:8880;
+        proxy_pass http://prod_ws:8880;
 
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -18,14 +36,7 @@ server {
 
     location / {
         resolver 127.0.0.11;
-        set $upstream_prod app;
-        proxy_pass http://$upstream_prod:3000;
-
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+        proxy_pass http://prod;
     }
 }
 
@@ -33,12 +44,11 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name next.vatsim-radar.com www.next.vatsim-radar.com;
+    server_name next.vatsim-radar.com www.next.vatsim-radar.com do-next.vatsim-radar.com;
 
     location /ws {
         resolver 127.0.0.11;
-        set $upstream_next app-next;
-        proxy_pass http://$upstream_next:8880;
+        proxy_pass http://next_ws:8880;
 
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -49,13 +59,6 @@ server {
 
     location / {
         resolver 127.0.0.11;
-        set $upstream_next app-next;
-        proxy_pass http://$upstream_next:3000;
-
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+        proxy_pass http://next;
     }
 }
