--- a/.github/workflows/publish-next.yaml
+++ b/.github/workflows/publish-next.yaml
@@ -72,7 +72,7 @@ jobs:
             CF_R2_ACCESS_ID=${{ secrets.CF_R2_ACCESS_ID }}
             CF_R2_ACCESS_TOKEN=${{ secrets.CF_R2_ACCESS_TOKEN }}
   deploy:
-    runs-on: morgan
+    runs-on: do-next
     #runs-on: beget
     needs:
       - push
@@ -92,10 +92,39 @@ jobs:
         run: docker pull ghcr.io/vatsim-radar/vatsim-radar/next:latest
       - name: Build
         shell: bash
-        run: docker compose -f docker-compose.prod-next.yml build
+        run: docker compose -f docker-compose.next.yml build
       - name: Deploy
         shell: bash
-        run: docker compose -f docker-compose.prod-next.yml up -d
+        run: docker compose -f docker-compose.next.yml up -d
+      - name: Clear
+        shell: bash
+        run: docker system prune --force && docker system prune --volumes --force
+
+  deploy-nginx:
+    runs-on: do-nginx
+    #runs-on: beget
+    needs:
+      - push
+    permissions:
+      contents: read
+      packages: read
+    steps:
+      - uses: actions/checkout@v4
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Pull
+        shell: bash
+        run: docker pull ghcr.io/vatsim-radar/vatsim-radar/next:latest
+      - name: Build
+        shell: bash
+        run: docker compose -f docker-compose.nginx.yml build
+      - name: Deploy
+        shell: bash
+        run: docker compose -f docker-compose.nginx.yml up -d
       - name: Clear
         shell: bash
         run: docker system prune --force && docker system prune --volumes --force
