--- a/docker-compose.next.yml
+++ b/docker-compose.next.yml
@@ -15,6 +15,31 @@ services:
     volumes:
       - /opt/radar-next-data:/radar/src/data
 
+  worker:
+    build:
+      context: .
+      dockerfile: .config/dev.Dockerfile
+    image: ghcr.io/vatsim-radar/vatsim-radar/next
+    container_name: app-worker
+    command: /radar/.config/worker.sh
+    volumes:
+      - /opt/radar-next-data:/radar/src/data
+    depends_on:
+      db-next:
+        condition: service_healthy
+      redis:
+        condition: service_started
+      app-next:
+        condition: service_healthy
+
+  redis:
+    image: redis
+    command: redis-server --requirepass RADAR
+    expose:
+      - 6379
+    environment:
+      - REDIS_APPLICATION_MODE=master
+
   db-next:
     image: mysql
     restart: always
