--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "deep-object-diff": "^1.1.9",
     "discord.js": "^14.15.3",
     "idb": "^8.0.0",
+    "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
     "kafkajs": "^2.2.4",
