--- a/.config/nginx/nginx.conf
+++ b/.config/nginx/nginx.conf
@@ -63,4 +63,21 @@ http {
 
     include /etc/nginx/conf.d/*.conf;
     include /etc/nginx/sites-enabled/*;
+
+    upstream prod {
+        server 10.110.0.2:8080;
+        server 10.110.0.2:8081;
+    }
+
+    upstream prod_ws {
+        server 10.110.0.2:8880;
+    }
+
+    upstream next {
+         server 10.110.0.3:8080;
+    }
+
+    upstream next_ws {
+         server 10.110.0.3:8880;
+    }
 }
