--- a/.config/nginx/default.conf
+++ b/.config/nginx/default.conf
@@ -6,7 +6,7 @@ server {
 
     location /ws {
         resolver 127.0.0.11;
-        proxy_pass http://prod_ws:8880;
+        proxy_pass http://prod_ws;
 
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -18,8 +18,8 @@ server {
     location / {
         resolver 127.0.0.11;
         proxy_pass http://prod;
-    }
 }
+    }
 
 server {
     listen 80;
@@ -29,7 +29,7 @@ server {
 
     location /ws {
         resolver 127.0.0.11;
-        proxy_pass http://next_ws:8880;
+        proxy_pass http://next_ws;
 
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
