--- a/docker-compose.next.yml
+++ b/docker-compose.next.yml
@@ -10,23 +10,27 @@ services:
         condition: service_healthy
     ports:
       - 8080:3000
+    healthcheck:
+      test: "bash -c 'echo -n > /dev/tcp/127.0.0.1/3000'"
+      interval: 1s
+      retries: 360
     volumes:
       - /opt/radar-next-data:/radar/src/data
 
-  worker:
-    build:
-      context: .
-      dockerfile: .config/dev.Dockerfile
-    image: ghcr.io/vatsim-radar/vatsim-radar/next
-    container_name: app-worker
-    command: /radar/.config/worker.sh
-    volumes:
-      - /opt/radar-next-data:/radar/src/data
-    depends_on:
-      db-next:
-        condition: service_healthy
-      redis:
-        condition: service_started
+#  worker:
+#    build:
+#      context: .
+#      dockerfile: .config/dev.Dockerfile
+#    image: ghcr.io/vatsim-radar/vatsim-radar/next
+#    container_name: app-worker
+#    command: /radar/.config/worker-prod.sh
+#    volumes:
+#      - /opt/radar-next-data:/radar/src/data
+#    depends_on:
+#      db-next:
+#        condition: service_healthy
+#      redis:
+#        condition: service_started
 
   redis:
     image: redis
