--- a/.github/workflows/publish-next.yaml
+++ b/.github/workflows/publish-next.yaml
@@ -74,8 +74,8 @@ jobs:
   deploy:
     runs-on: do-next
     #runs-on: beget
-#    needs:
-#      - push
+    needs:
+      - push
     permissions:
       contents: read
       packages: read
@@ -122,6 +122,6 @@ jobs:
       - name: Deploy
         shell: bash
         run: docker compose -f docker-compose.nginx.yml up -d
-#      - name: Clear
-#        shell: bash
-#        run: docker system prune --force && docker system prune --volumes --force
+      - name: Clear
+        shell: bash
+        run: docker system prune --force && docker system prune --volumes --force
