--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,33 +1,42 @@
 services:
-  nginx:
-    image: nginx
-    restart: always
-    container_name: nginx
-    volumes:
-      - ./.config/nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./.config/nginx/default.conf:/etc/nginx/conf.d/default.conf
-    ports:
-      #- 8080:80
-      - 80:80
-    depends_on:
-      app:
-        condition: service_healthy
-
   app:
     container_name: app
     restart: always
     image: ghcr.io/vatsim-radar/vatsim-radar/production
-    ports:
-      - 8001:3000
     depends_on:
+      redis:
+        condition: service_started
       db:
         condition: service_healthy
+    ports:
+      - 8080:3000
     healthcheck:
       test: "bash -c 'echo -n > /dev/tcp/127.0.0.1/3000'"
       interval: 1s
       retries: 360
     volumes:
       - /opt/radar-data:/radar/src/data
+
+  worker:
+    image: ghcr.io/vatsim-radar/vatsim-radar/production
+    container_name: app-worker
+    restart: always
+    command: /radar/.config/worker-prod.sh
+    volumes:
+      - /opt/radar-data:/radar/src/data
+    depends_on:
+      db-next:
+        condition: service_healthy
+      redis:
+        condition: service_started
+
+  redis:
+    image: redis
+    command: redis-server --requirepass RADAR
+    expose:
+      - 6379
+    environment:
+      - REDIS_APPLICATION_MODE=master
 
   db:
     image: mysql
