--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -14,6 +14,10 @@ services:
       test: "bash -c 'echo -n > /dev/tcp/127.0.0.1/3000'"
       interval: 1s
       retries: 360
+    deploy:
+      mode: replicated
+      replicas: 2
+      endpoint_mode: vip
     volumes:
       - /opt/radar-data:/radar/src/data
 
