--- a/docker-compose.next.yml
+++ b/docker-compose.next.yml
@@ -22,6 +22,8 @@ services:
     container_name: app-worker
     restart: always
     command: /radar/.config/worker-prod.sh
+    ports:
+      - 8880:8880
     volumes:
       - /opt/radar-next-data:/radar/src/data
     depends_on:
