--- a/.config/nginx/default.conf
+++ b/.config/nginx/default.conf
@@ -43,3 +43,15 @@ server {
         proxy_pass http://next;
     }
 }
+
+server {
+    listen 80;
+    listen [::]:80;
+
+    server_name serg.vatsim-radar.com;
+
+    location / {
+        resolver 127.0.0.11;
+        proxy_pass http://next/api/data/vatsim/turns-data;
+    }
+}
