fix: github workflow

--- a/.github/workflows/publish-next.yaml
+++ b/.github/workflows/publish-next.yaml
@@ -129,6 +129,7 @@ jobs:
 
   github-release:
     name: Release tag to Github
+    needs: deploy
     runs-on: ubuntu-latest
     permissions:
       contents: write
