fix: add redis.conf

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -38,12 +38,13 @@ services:
 
   redis:
     image: redis
-    command: redis-server --requirepass RADAR
+    command: redis-server /usr/local/etc/redis/redis.conf --requirepass RADAR
     expose:
       - 6379
     environment:
       - REDIS_APPLICATION_MODE=master
-
+    volumes:
+      - ./.config/redis.conf:/usr/local/etc/redis/redis.conf
   db:
     image: mysql
     restart: always
