fix: add redis auto restart
(cherry picked from commit a2c4f40ce66e3fa3fe087ab7d74ff1876094224b)

--- a/docker-compose.next.yml
+++ b/docker-compose.next.yml
@@ -33,6 +33,7 @@ services:
         condition: service_started
 
   redis:
+    restart: always
     image: redis
     command: redis-server /usr/local/etc/redis/redis.conf --requirepass RADAR
     expose:
