--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -36,6 +36,7 @@ services:
         condition: service_started
 
   redis:
+    restart: always
     image: redis
     command: redis-server /usr/local/etc/redis/redis.conf --requirepass RADAR
     expose:
