--- a/.config/Dockerfile
+++ b/.config/Dockerfile
@@ -38,6 +38,8 @@ ARG CF_R2_API
 ARG CF_R2_ACCESS_ID
 ARG CF_R2_ACCESS_TOKEN
 
+ARG PATREON_ACCESS_TOKEN
+
 ENV NUXT_DOMAIN=${DOMAIN}
 ENV NUXT_NAVIGRAPH_CLIENT_ID=${NAVIGRAPH_CLIENT_ID}
 ENV NUXT_NAVIGRAPH_CLIENT_SECRET=${NAVIGRAPH_CLIENT_SECRET}
@@ -71,6 +73,7 @@ ENV NUXT_PUBLIC_DISABLE_WEBSOCKETS=${DISABLE_WEBSOCKETS}
 ENV CF_R2_API=${CF_R2_API}
 ENV CF_R2_ACCESS_ID=${CF_R2_ACCESS_ID}
 ENV CF_R2_ACCESS_TOKEN=${CF_R2_ACCESS_TOKEN}
+ENV PATREON_ACCESS_TOKEN=${PATREON_ACCESS_TOKEN}
 
 ENV INFLUX_URL=${INFLUX_URL}
 ENV INFLUX_TOKEN=${INFLUX_TOKEN}
