--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,8 @@ VATSIM_KAFKA_USER=
 VATSIM_KAFKA_PASSWORD=
 VATSIM_KAFKA_GROUP=
 
+PATREON_ACCESS_TOKEN=
+
 CF_R2_API=
 CF_R2_ACCESS_ID=
 CF_R2_ACCESS_TOKEN=
