--- a/.github/workflows/publish-next.yaml
+++ b/.github/workflows/publish-next.yaml
@@ -71,6 +71,7 @@ jobs:
             CF_R2_API=${{ secrets.CF_R2_API }}
             CF_R2_ACCESS_ID=${{ secrets.CF_R2_ACCESS_ID }}
             CF_R2_ACCESS_TOKEN=${{ secrets.CF_R2_ACCESS_TOKEN }}
+            PATREON_ACCESS_TOKEN=${{ secrets.PATREON_ACCESS_TOKEN }}
   deploy:
     runs-on: do-next
     #runs-on: beget
