--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vatsim-radar",
-  "version": "0.4.4-final",
+  "version": "0.4.4",
   "private": true,
   "type": "module",
   "scripts": {
