--- a/package.json
+++ b/package.json
@@ -25,17 +25,17 @@
     "@prisma/client": "^5.19.1",
     "@turf/great-circle": "^7.1.0",
     "adm-zip": "^0.5.16",
-    "aws-sdk": "^2.1687.0",
+    "aws-sdk": "^2.1690.0",
     "chardet": "^2.0.0",
     "cron": "^3.1.7",
-    "discord.js": "^14.15.3",
+    "discord.js": "^14.16.1",
     "idb": "^8.0.0",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
     "kafkajs": "^2.2.4",
     "metar-taf-parser": "^9.0.1",
-    "nuxt": "^3.13.0",
+    "nuxt": "^3.13.1",
     "ol": "^10.1.0",
     "ol-mapbox-style": "^12.3.5",
     "pinia": "^2.2.2",
@@ -45,26 +45,26 @@
     "svgo": "^3.3.2",
     "ua-parser-js": "2.0.0-beta.3",
     "vite-svg-loader": "^5.1.0",
-    "vue": "^3.4.38",
+    "vue": "^3.5.2",
     "vue-router": "^4.4.3",
     "ws": "^8.18.0"
   },
   "devDependencies": {
     "@nuxt/devtools": "^1.4.1",
-    "@nuxt/eslint": "^0.5.5",
+    "@nuxt/eslint": "^0.5.6",
     "@nuxtjs/stylelint-module": "^5.2.0",
     "@stylistic/eslint-plugin": "^2.7.2",
     "@stylistic/stylelint-plugin": "^3.0.1",
     "@types/adm-zip": "^0.5.5",
     "@types/geojson": "^7946.0.14",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^22.5.2",
+    "@types/node": "^22.5.4",
     "@types/ws": "^8.5.12",
     "eslint": "^9.9.1",
-    "fast-xml-parser": "^4.4.1",
-    "postcss": "^8.4.44",
+    "fast-xml-parser": "^4.5.0",
+    "postcss": "^8.4.45",
     "postcss-html": "^1.7.0",
-    "sass": "^1.77.8",
+    "sass-embedded": "^1.78.0",
     "stylelint": "^16.9.0",
     "stylelint-config-clean-order": "^6.1.0",
     "stylelint-config-recommended-scss": "^14.1.0",
@@ -73,7 +73,10 @@
     "tsx": "4.16.2",
     "typescript": "5.5.4",
     "vite-plugin-eslint2": "^4.4.0",
-    "vue-tsc": "2.0.29"
+    "vue-tsc": "2.1.6"
+  },
+  "resolutions": {
+    "vite-plugin-checker": "^0.8.0"
   },
   "packageManager": "yarn@4.4.1"
 }
