--- a/.config/nginx/nginx.conf
+++ b/.config/nginx/nginx.conf
@@ -67,6 +67,7 @@ http {
     upstream prod {
         server 10.110.0.2:8080;
         server 10.110.0.2:8081;
+        server 10.110.0.2:8082;
     }
 
     upstream prod_ws {
