--- a/.config/nginx/nginx.conf
+++ b/.config/nginx/nginx.conf
@@ -1,6 +1,7 @@
 user nobody nogroup;
-worker_processes 2;
-worker_rlimit_nofile 40000;
+worker_processes auto;
+worker_rlimit_nofile 100000;
+worker_cpu_affinity auto;
 pid /run/nginx.pid;
 include /etc/nginx/modules-enabled/*.conf;
 
@@ -53,7 +54,7 @@ http {
     gzip on;
     gzip_min_length 64;
     gzip_proxied expired no-cache no-store private auth;
-    gzip_comp_level 4;
+    gzip_comp_level 3;
     gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml text/html application/json;
     gzip_disable "msie6";
 
@@ -65,9 +66,9 @@ http {
     include /etc/nginx/sites-enabled/*;
 
     upstream prod {
+        least_conn;
         server 10.110.0.2:8080;
         server 10.110.0.2:8081;
-        server 10.110.0.2:8082;
     }
 
     upstream prod_ws {
