--- a/.config/Dockerfile
+++ b/.config/Dockerfile
@@ -38,6 +38,9 @@ ARG CF_R2_API
 ARG CF_R2_ACCESS_ID
 ARG CF_R2_ACCESS_TOKEN
 
+ARG FAA_NOTAMS_CLIENT_ID
+ARG FAA_NOTAMS_CLIENT_SECRET
+
 ARG PATREON_ACCESS_TOKEN
 
 ENV NUXT_DOMAIN=${DOMAIN}
@@ -74,6 +77,8 @@ ENV CF_R2_API=${CF_R2_API}
 ENV CF_R2_ACCESS_ID=${CF_R2_ACCESS_ID}
 ENV CF_R2_ACCESS_TOKEN=${CF_R2_ACCESS_TOKEN}
 ENV PATREON_ACCESS_TOKEN=${PATREON_ACCESS_TOKEN}
+ENV FAA_NOTAMS_CLIENT_ID=${FAA_NOTAMS_CLIENT_ID}
+ENV FAA_NOTAMS_CLIENT_SECRET=${FAA_NOTAMS_CLIENT_SECRET}
 
 ENV INFLUX_URL=${INFLUX_URL}
 ENV INFLUX_TOKEN=${INFLUX_TOKEN}
