--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vatsim-radar",
-  "version": "0.4.5-beta.1",
+  "version": "0.4.5-rc.1",
   "private": true,
   "type": "module",
   "scripts": {
