--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vatsim-radar",
-  "version": "0.4.5-rc.2",
+  "version": "0.4.5-final",
   "private": true,
   "type": "module",
   "scripts": {
