--- a/package.json
+++ b/package.json
@@ -23,7 +23,13 @@
     "@influxdata/influxdb-client-apis": "^1.35.0",
     "@pinia/nuxt": "^0.5.5",
     "@prisma/client": "^5.20.0",
+    "@turf/difference": "^7.1.0",
     "@turf/great-circle": "^7.1.0",
+    "@turf/helpers": "^7.1.0",
+    "@turf/intersect": "^7.1.0",
+    "@turf/meta": "^7.1.0",
+    "@turf/truncate": "^7.1.0",
+    "@turf/union": "^7.1.0",
     "adm-zip": "^0.5.16",
     "aws-sdk": "^2.1691.0",
     "chardet": "^2.0.0",
@@ -34,6 +40,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
     "kafkajs": "^2.2.4",
+    "merge-ranges": "^1.0.2",
     "metar-taf-parser": "^9.0.1",
     "nuxt": "^3.13.2",
     "ol": "^10.2.1",
@@ -58,6 +65,7 @@
     "@types/adm-zip": "^0.5.5",
     "@types/geojson": "^7946.0.14",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/merge-ranges": "^1",
     "@types/node": "^22.7.5",
     "@types/ws": "^8.5.12",
     "eslint": "^9.12.0",
