chore: add new VR cores

--- a/.config/nginx/nginx.conf
+++ b/.config/nginx/nginx.conf
@@ -72,6 +72,8 @@ http {
         server 10.110.0.2:8082;
         server 10.110.0.2:8083;
         server 10.110.0.2:8084;
+        server 10.110.0.2:8085;
+        server 10.110.0.2:8086;
     }
 
     upstream prod_ws {
