chore: update nginx config

--- a/.config/nginx/default.conf
+++ b/.config/nginx/default.conf
@@ -15,11 +15,16 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
+    location ~ turns$ {
+        resolver 127.0.0.11;
+        proxy_pass http://prod_turns;
+    }
+
     location / {
         resolver 127.0.0.11;
         proxy_pass http://prod;
-}
     }
+}
 
 server {
     listen 80;
