--- a/.config/nginx/nginx.conf
+++ b/.config/nginx/nginx.conf
@@ -68,10 +68,11 @@ http {
     upstream prod {
         least_conn;
         server 10.110.0.2:8080;
+    }
+
+    upstream prod_turns {
+        least_conn;
         server 10.110.0.2:8081;
-        server 10.110.0.2:8082;
-        server 10.110.0.2:8083;
-        server 10.110.0.2:8084;
     }
 
     upstream prod_ws {
