--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "aws-sdk": "^2.1691.0",
     "chardet": "^2.0.0",
     "cron": "^3.1.8",
+    "croner": "^9.0.0",
     "discord.js": "^14.16.3",
     "idb": "^8.0.0",
     "ioredis": "^5.4.1",
