--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vatsim-radar",
-  "version": "0.5.0-alpha.9",
+  "version": "0.5.0-beta.1",
   "private": true,
   "type": "module",
   "scripts": {
