--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@pinia/nuxt": "^0.7.0",
     "@prisma/client": "^5.22.0",
     "@turf/great-circle": "^7.1.0",
+    "@vite-pwa/nuxt": "^0.10.6",
     "adm-zip": "^0.5.16",
     "aws-sdk": "^2.1692.0",
     "chardet": "^2.0.0",
@@ -45,6 +46,7 @@
     "sqlite3": "^5.1.7",
     "svgo": "^3.3.2",
     "ua-parser-js": "2.0.0-rc.2",
+    "vite-plugin-pwa": "^0.20.5",
     "vite-svg-loader": "^5.1.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
