--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vatsim-radar",
-  "version": "0.5.0-beta.3",
+  "version": "0.5.0-beta.4",
   "private": true,
   "type": "module",
   "scripts": {
@@ -25,6 +25,9 @@
     "@prisma/client": "^5.22.0",
     "@turf/great-circle": "^7.1.0",
     "@vite-pwa/nuxt": "^0.10.6",
+    "@vueuse/components": "^11.2.0",
+    "@vueuse/core": "^11.2.0",
+    "@vueuse/nuxt": "^11.2.0",
     "adm-zip": "^0.5.16",
     "aws-sdk": "^2.1692.0",
     "chardet": "^2.0.0",
