--- a/.config/Dockerfile
+++ b/.config/Dockerfile
@@ -95,6 +95,7 @@ ENV NAVIGRAPH_CLIENT_ID=${NAVIGRAPH_CLIENT_ID}
 ENV NAVIGRAPH_CLIENT_SECRET=${NAVIGRAPH_CLIENT_SECRET}
 ENV NAVIGRAPH_SERVER_ID=${NAVIGRAPH_SERVER_ID}
 ENV NAVIGRAPH_SERVER_SECRET=${NAVIGRAPH_SERVER_SECRET}
+ENV NODE_ENV=production
 
 COPY package.json package.json
 COPY yarn.lock yarn.lock
