--- a/.github/workflows/publish-next.yaml
+++ b/.github/workflows/publish-next.yaml
@@ -33,8 +33,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Add .env file
-        run: |
-          echo "${{ secrets.ENV }}" > .env
+        run: echo "${{ secrets.ENV }}" > .env
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
