--- a/.github/workflows/publish-next.yaml
+++ b/.github/workflows/publish-next.yaml
@@ -34,6 +34,8 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Add .env file
         run: echo "${{ secrets.ENV }}" > .env
+      - name: Test .env file
+        run: ls -la
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
