--- a/.config/k8s/ingress.yml
+++ b/.config/k8s/ingress.yml
@@ -4,6 +4,12 @@ metadata:
   name: ingress-default
   annotations:
     kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade "websocket";
+      proxy_set_header Connection "Upgrade";
 spec:
   rules:
     - host: "do-next.vatsim-radar.com"
@@ -16,3 +22,10 @@ spec:
                 name: app-next
                 port:
                   number: 3000
+          - pathType: Prefix
+            path: "/ws"
+            backend:
+              service:
+                name: app-worker
+                port:
+                  number: 8800
