--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,8 @@ INFLUX_BUCKET_ONLINE=
 INFLUX_ENABLE_WRITE=false
 DISABLE_WEBSOCKETS=false
 
+REDIS_HOST=redis
+
 VATSIM_KAFKA_BROKER=
 VATSIM_KAFKA_USER=
 VATSIM_KAFKA_PASSWORD=
