--- a/.config/k8s/ingress.yml
+++ b/.config/k8s/ingress.yml
@@ -22,6 +22,6 @@ spec:
             path: "/ws"
             backend:
               service:
-                name: app-worker
+                name: worker-next
                 port:
                   number: 8880
