--- a/.github/workflows/publish-next.yaml
+++ b/.github/workflows/publish-next.yaml
@@ -56,7 +56,11 @@ jobs:
           personalAccessToken: ${{ secrets.DIGITALOCEAN_TOKEN }}
           clusterName: main
       - name: Deploy App
-        run: kubectl replace -f .config/k8s/next/app.yml --force
+        run: kubectl apply -f .config/k8s/next/app.yml
+      - name: Apply App
+        run: kubectl rollout restart deployment app-next
+      - name: Apply Worker
+        run: kubectl rollout restart deployment worker-next
       - name: Validate App
         run: kubectl rollout status deployment app-next
       - name: Validate Worker
