--- a/.config/k8s/next/app.yml
+++ b/.config/k8s/next/app.yml
@@ -30,8 +30,8 @@ spec:
               cpu: 300m
               memory: 300Mi
             limits:
-              cpu: 1000m
-              memory: 1Gi
+              cpu: 950m
+              memory: 950Mi
           readinessProbe:
             tcpSocket:
               port: 3000
