chore: update app scale

--- a/.config/k8s/main/app.yml
+++ b/.config/k8s/main/app.yml
@@ -138,3 +138,6 @@ spec:
         target:
           type: Utilization
           averageUtilization: 80
+  behavior:
+    scaleDown:
+      stabilizationWindowSeconds: 300
