--- a/.config/k8s/next/db.yml
+++ b/.config/k8s/next/db.yml
@@ -26,7 +26,7 @@ spec:
         app: db-next
     spec:
       nodeSelector:
-        doks.digitalocean.com/node-pool: basic
+        doks.digitalocean.com/node-pool: basic-2
       containers:
         - name: db-next
           image: mysql
