--- a/.config/k8s/next/redis.yml
+++ b/.config/k8s/next/redis.yml
@@ -26,7 +26,7 @@ spec:
         app: redis-next
     spec:
       nodeSelector:
-        doks.digitalocean.com/node-pool: basic
+        doks.digitalocean.com/node-pool: basic-2
       containers:
         - name: redis-next
           image: redis
