--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vatsim-radar",
-  "version": "0.5.1-1-final",
+  "version": "1.0.0-alpha.1",
   "private": true,
   "type": "module",
   "scripts": {
