--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "vatsim-radar",
-  "version": "0.5.1-1-final",
+  "version": "1.0.0-alpha.1",
   "private": true,
   "type": "module",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
+    "prepare": "nuxt prepare",
     "generate": "nuxt generate",
     "preview": "node .output/server/index.mjs",
-    "postinstall": "nuxt prepare",
+    "postinstall": "yarn prepare",
     "recreateDb": "npx prisma migrate diff --from-empty --to-schema-datamodel prisma/schema.prisma --script > prisma/migrations/0_init/migration.sql && rm -rf .config/db && docker compose down",
     "lint:ts": "eslint .",
     "lint:ts:fix": "eslint . --fix",
