--- a/.config/k8s/next/app.yml
+++ b/.config/k8s/next/app.yml
@@ -27,8 +27,8 @@ spec:
               cpu: 300m
               memory: 300Mi
             limits:
-              cpu: 950m
-              memory: 950Mi
+              cpu: 1000m
+              memory: 1Gi
           readinessProbe:
             tcpSocket:
               port: 3000
@@ -40,7 +40,7 @@ spec:
       imagePullSecrets:
         - name: ghcr-login-secret
       nodeSelector:
-        doks.digitalocean.com/node-pool: premium-amd
+        doks.digitalocean.com/node-pool: basic
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -62,7 +62,7 @@ spec:
       imagePullSecrets:
         - name: ghcr-login-secret
       nodeSelector:
-        doks.digitalocean.com/node-pool: premium-amd
+        doks.digitalocean.com/node-pool: basic
       containers:
         - name: worker
           image: ghcr.io/vatsim-radar/vatsim-radar/next
