--- a/.config/k8s/main/app.yml
+++ b/.config/k8s/main/app.yml
@@ -24,11 +24,11 @@ spec:
             - containerPort: 3000
           resources:
             requests:
-              cpu: 800m
+              cpu: 500m
               memory: 300Mi
             limits:
-              cpu: 1000m
-              memory: 1Gi
+              cpu: 950m
+              memory: 950Mi
           readinessProbe:
             tcpSocket:
               port: 3000
@@ -40,7 +40,7 @@ spec:
       imagePullSecrets:
         - name: ghcr-login-secret
       nodeSelector:
-        doks.digitalocean.com/node-pool: basic
+        doks.digitalocean.com/node-pool: premium
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -62,7 +62,7 @@ spec:
       imagePullSecrets:
         - name: ghcr-login-secret
       nodeSelector:
-        doks.digitalocean.com/node-pool: basic
+        doks.digitalocean.com/node-pool: premium
       containers:
         - name: worker
           image: ghcr.io/vatsim-radar/vatsim-radar/production
@@ -72,7 +72,7 @@ spec:
             - containerPort: 8880
           resources:
             requests:
-              cpu: 800m
+              cpu: 500m
               memory: 300Mi
             limits:
               cpu: 1000m
@@ -123,7 +123,7 @@ spec:
         name: cpu
         target:
           type: Utilization
-          averageUtilization: 100
+          averageUtilization: 160
   behavior:
     scaleDown:
       stabilizationWindowSeconds: 120
