--- a/.config/k8s/next/app.yml
+++ b/.config/k8s/next/app.yml
@@ -27,8 +27,8 @@ spec:
               cpu: 300m
               memory: 300Mi
             limits:
-              cpu: 1000m
-              memory: 1Gi
+              cpu: 950m
+              memory: 950Mi
           readinessProbe:
             tcpSocket:
               port: 3000
@@ -40,7 +40,7 @@ spec:
       imagePullSecrets:
         - name: ghcr-login-secret
       nodeSelector:
-        doks.digitalocean.com/node-pool: basic
+        doks.digitalocean.com/node-pool: premium
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -62,7 +62,7 @@ spec:
       imagePullSecrets:
         - name: ghcr-login-secret
       nodeSelector:
-        doks.digitalocean.com/node-pool: basic
+        doks.digitalocean.com/node-pool: premium
       containers:
         - name: worker
           image: ghcr.io/vatsim-radar/vatsim-radar/next
@@ -72,7 +72,7 @@ spec:
             - containerPort: 8880
           resources:
             requests:
-              cpu: 800m
+              cpu: 500m
               memory: 300Mi
             limits:
               cpu: 1000m
