--- a/.config/k8s/main/app.yml
+++ b/.config/k8s/main/app.yml
@@ -24,7 +24,7 @@ spec:
             - containerPort: 3000
           resources:
             requests:
-              cpu: 400m
+              cpu: 600m
               memory: 300Mi
             limits:
               cpu: 950m
@@ -62,7 +62,7 @@ spec:
       imagePullSecrets:
         - name: ghcr-login-secret
       nodeSelector:
-        doks.digitalocean.com/node-pool: premium
+        doks.digitalocean.com/node-pool: basic-2-2
       containers:
         - name: worker
           image: ghcr.io/vatsim-radar/vatsim-radar/production
@@ -72,7 +72,7 @@ spec:
             - containerPort: 8880
           resources:
             requests:
-              cpu: 400m
+              cpu: 600m
               memory: 300Mi
             limits:
               cpu: 1000m
@@ -123,7 +123,7 @@ spec:
         name: cpu
         target:
           type: Utilization
-          averageUtilization: 220
+          averageUtilization: 140
   behavior:
     scaleDown:
       stabilizationWindowSeconds: 120
