ci: update error pages

--- a/.config/k8s/ingress.yml
+++ b/.config/k8s/ingress.yml
@@ -191,7 +191,7 @@ data:
             </div>
         </div>
         <div class="error_subtitle">
-            MISSED APPROACH
+            GOING AROUND
         </div>
         <div class="error_text">
             VATSIM Radar is most likely updating. This may take a few minutes.<br>
