--- a/.config/k8s/next/app.yml
+++ b/.config/k8s/next/app.yml
@@ -42,6 +42,16 @@ spec:
       nodeSelector:
         doks.digitalocean.com/node-pool: basic-2-2
 ---
+apiVersion: v1
+kind: Service
+metadata:
+  name: app-next
+spec:
+  ports:
+    - port: 3000
+  selector:
+    app: app-next
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -96,12 +106,44 @@ spec:
   selector:
     app: worker-next
 ---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: vatglasses-next
+spec:
+  progressDeadlineSeconds: 360
+  replicas: 1
+  strategy:
+    type: Recreate
+  selector:
+    matchLabels:
+      app: vatglasses-next
+  template:
+    metadata:
+      labels:
+        app: vatglasses-next
+    spec:
+      imagePullSecrets:
+        - name: ghcr-login-secret
+      nodeSelector:
+        doks.digitalocean.com/node-pool: basic-2-2
+      containers:
+        - name: worker
+          image: ghcr.io/vatsim-radar/vatsim-radar/next
+          imagePullPolicy: Always
+          command: ["/radar/.config/vatglasses-worker-prod.sh"]
+          resources:
+            requests:
+              cpu: 600m
+              memory: 300Mi
+            limits:
+              cpu: 1000m
+              memory: 1Gi
+---
 apiVersion: v1
 kind: Service
 metadata:
-  name: app-next
+  name: vatglasses-next
 spec:
-  ports:
-    - port: 3000
   selector:
-    app: app-next
+    app: vatglasses-next
