--- a/.github/workflows/publish-next.yaml
+++ b/.github/workflows/publish-next.yaml
@@ -61,10 +61,14 @@ jobs:
         run: kubectl rollout restart deployment app-next
       - name: Apply Worker
         run: kubectl rollout restart deployment worker-next
+      - name: Apply VG
+        run: kubectl rollout restart deployment vatglasses-next
       - name: Validate App
         run: kubectl rollout status deployment app-next
       - name: Validate Worker
         run: kubectl rollout status deployment worker-next
+      - name: Validate VG
+        run: kubectl rollout status deployment vatglasses-next
 
   deploy-db-redis:
     runs-on: ubuntu-latest
