chore: try to fix redis

--- a/.config/k8s/next/app.yml
+++ b/.config/k8s/next/app.yml
@@ -132,6 +132,8 @@ spec:
           image: ghcr.io/vatsim-radar/vatsim-radar/next
           imagePullPolicy: Always
           command: ["/radar/.config/vatglasses-worker-prod.sh"]
+          ports:
+            - containerPort: 8880
           resources:
             requests:
               cpu: 600m
@@ -139,3 +141,13 @@ spec:
             limits:
               cpu: 1000m
               memory: 1Gi
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: vatglasses-next
+spec:
+  ports:
+    - port: 8880
+  selector:
+    app: vatglasses-next
